--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   script: {{ PYTHON }} -m pip install --no-build-isolation . -vv
-  number: 0
+  number: 1
   noarch: python
 
 requirements:
@@ -21,8 +21,8 @@ requirements:
     - pip
   run:
     - zstandard >=0.15
-    - requests
     - python >=3.7
+    # 'requests' is optional, only needed for 'url' submodule
 
 test:
   imports:
@@ -31,6 +31,7 @@ test:
     - pip check
   requires:
     - pip
+    - requests
 
 about:
   home: https://github.com/conda/conda-package-streaming
